# PriMod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  api.h  dll_main.cpp  dllmain.cpp  function_exports.h  library.cpp  library.h  main.cpp  main.h  modloader.h  modloader_main.cpp  primordialis.h
pilus_modloader/: modloader.h  modloader_main.cpp
plasmid_api/: dll_main.cpp
plasmid_api/include/: api.h  data_exports.h  data_types.h  forward_declarations.h  function_exports.h  ghidra_types.h
